<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOfflineAddExpense">

    <TextView
        android:id="@+id/add_expense_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/add_expense"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_expense_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#6aff0066"
        android:elevation="2dp"
        android:popupElevation="3dp"
        android:popupTheme="@android:anim/fade_in"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/expense_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/expense_types"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/amount_paid"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_paid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/submit" />

</RelativeLayout>

