<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOnlineModifyExpense">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_details"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:id="@+id/add_expense_text_modify"
        android:textSize="40sp"/>

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_expense_text_modify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/spinner_name_modify"
        android:backgroundTint="#6aff0066"
        android:spinnerMode="dropdown"
        android:elevation="2dp"
        android:popupElevation="3dp"
        android:popupTheme="@android:anim/fade_in"/>

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_name_modify"
        android:id="@+id/spinner_item"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#6aff0066"
        android:spinnerMode="dropdown"
        android:elevation="2dp"
        android:popupElevation="3dp"
        android:popupTheme="@android:anim/fade_in"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/amount_paid"
        android:layout_below="@+id/spinner_item"
        android:id="@+id/amount_paid_modify"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:inputType="number"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit_modify"
        android:layout_below="@id/amount_paid_modify"
        android:layout_centerHorizontal="true"
        android:text="@string/update"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
